Re-style source code snippets again

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -14,12 +14,12 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 \lstset{
-	aboveskip=3mm,
-	belowskip=3mm,
+	aboveskip=5mm,
+	belowskip=5mm,
 	basicstyle={\large\ttfamily},
 	columns=flexible,
-	frame=tb,
 	language=Lisp,
+	numbers=left,
 	showstringspaces=false,
 	% Style copied from https://stackoverflow.com/questions/3175105/
 	numberstyle=\normalsize\color{gray},
